# bunkerweb

./: .coderabbit.yaml  .dockerignore  .gitattributes  .gitignore  .gitleaksignore  .gitmodules  .luacheckrc  .mypy.ini  .pre-commit-config.yaml  .prettierignore  .travis.yml  .trivyignore  .trivyignore.rego  404.html  AGENTS.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  ChangeLog  Changes.md  Dockerfile  Dockerfile-386  Dockerfile-amd64  Dockerfile-arm32v7  Dockerfile-arm64v8  Dockerfile-i386  Dockerfile-libressl  Dockerfile-libressl-amd64  Dockerfile-libressl-arm32v7  Dockerfile-libressl-arm64v8  Dockerfile-libressl-i386  INSTALL  LICENSE  Makefile  Makefile.am  (+45 more)
programs/fuzz/: .gitignore  CMakeLists.txt  Makefile  README.md  common.h  fuzz_dtlsclient.c  fuzz_pkcs7.c  fuzz_privkey.c  fuzz_pubkey.c  fuzz_server.c  fuzz_x509csr.c  onefile.c
programs/fuzz/corpuses/: client  dtlsclient  server
programs/ssl/: CMakeLists.txt  ssl_client1.c  ssl_context_info.c  ssl_mail_client.c  ssl_server.c  ssl_server2.c
src/: Makefile  Makefile.am  VERSION  alpine.supp  example1.c  fingerprints.txt  fptool.c  html5_cli.c  lib_buffer.c  lib_debug.c  lib_jit.c  lib_math.c  lib_string.c  libinjection_sqli.c  libinjection_xss.c  libinjection_xss.h  lj_arch.h  lj_asm_arm.h  lj_asm_mips.h  lj_asm_x86.h  lj_bcwrite.c  lj_carith.c  lj_ccall.h  lj_crecord.c  lj_ctype.h  lj_emit_ppc.h  lj_err.c  lj_errmsg.h  lj_func.c  lj_gc.c  lj_ir.c  lj_ircall.h  lj_lex.h  lj_lib.c  lj_lib.h  lj_mcode.c  lj_meta.h  lj_obj.c  lj_opt_fold.c  lj_opt_mem.c  (+36 more)
src/all-in-one/: AGENTS.md  CLAUDE.md  Dockerfile  entrypoint.sh  logging-utils.sh  logstream.sh  service-log-wrapper.sh  supervisord.conf
src/all-in-one/conf/: acquis.yaml  config.yaml  redis.conf
src/all-in-one/crowdsec/: appsec.yaml
src/all-in-one/scripts/: install-abseil-cpp.sh  install-crowdsec.sh  install-go.sh  install-re2.sh  utils.sh
src/all-in-one/supervisor.d/: api.ini  autoconf.ini  bunkerweb.ini  crowdsec.ini  logstream.ini  redis.ini  scheduler.ini  ui.ini  worker.ini
src/api/: AGENTS.md  CLAUDE.md  Dockerfile  api.conf  entrypoint.sh  gunicorn.conf.py  main.py  requirements.in  requirements.txt
src/api/app/: __init__.py  celery_app.py  config.py  deps.py  host_allowlist.py  main.py  rate_limit.py  request_size_limit.py  schemas.py  utils.py  yaml_base_settings.py
src/api/conf/: redis.conf
src/api/utils/: gunicorn.conf.py  logger.py  worker.py
src/autoconf/: AGENTS.md  CLAUDE.md  Config.py  Controller.py  DockerController.py  Dockerfile  IngressController.py  SwarmController.py  api_client.py  autoconf.conf.example  autoconf.py  entrypoint.sh  main.py  requirements.in  requirements.txt
src/autoconf/controllers/: Controller.py  DockerController.py  GatewayController.py  IngressController.py  KubernetesController.py  SwarmController.py
src/bw/: AGENTS.md  CLAUDE.md  Dockerfile  entrypoint.sh
src/bw/loading/: index.html
src/bw/lua/: api.lua  clusterstore.lua  datastore.lua  helpers.lua  middleclass.lua  plugins.lua  redisutils.lua  utils.lua
src/bw/misc/: root-ca.pem
src/client/: build.js
src/client/dashboard/: input.css  package-lock.json  package.json  tailwind.config.js  vite.config.js
src/client/setup/: index.html  package-lock.json  package.json  vite.config.js
src/client/tests/: bans.json  bans.py  globalconfig.json  globalconfig.py  globalconfig64.txt  home.json  home.py  home.txt  instances.json  instances.py  instances.txt  jobs.py  plugins.py
src/client/vite/: input.css  package-lock.json  package.json  tailwind.config.js  vite.config.js
src/common/: AGENTS.md  CLAUDE.md  README.de.md  README.es.md  README.fr.md  README.md  README.zh.md  settings.json
src/common/api/: API.py
src/common/cli/: CLI.py  main.py
src/common/confs/: api.conf  default-server-http.conf  fastcgi.conf  healthcheck.conf  http.conf  init-lua.conf  init-stream-lua.conf  init-worker-lua.conf  init-worker-stream-lua.conf  nginx.conf  stream.conf
src/common/core/: order.json
src/common/db/: Database.py  database.py  model.py  models.py  requirements.386.in  requirements.386.txt  requirements.arm.in  requirements.arm.txt  (+5 more)
src/core/: Dockerfile  core.conf  core.conf.example  core.py  entrypoint.sh  gunicorn.conf.py  main.py  requirements.in  requirements.txt  utils.py  uvicorn_worker.py
src/host/: buildvm_asm.c  buildvm_fold.c  buildvm_lib.c  buildvm_peobj.c  genversion.lua
src/jit/: dis_arm64be.lua  dis_mips.lua  dis_mips64el.lua  dump.lua
src/linux/: AGENTS.md  CLAUDE.md  Dockerfile-centos  Dockerfile-debian  Dockerfile-debian-bookworm  Dockerfile-debian-trixie  Dockerfile-fedora  Dockerfile-fedora-40  Dockerfile-fedora-41  Dockerfile-fedora-42  Dockerfile-fedora-43  Dockerfile-fedora-44  Dockerfile-rhel  Dockerfile-rhel-10  Dockerfile-rhel-8  Dockerfile-rhel-9  Dockerfile-rhel9  Dockerfile-rockylinux  Dockerfile-ubuntu  Dockerfile-ubuntu-jammy  Dockerfile-ubuntu-noble  RPM-GPG-KEY-Rocky-10  RPM-GPG-KEY-Rocky-9  RPM-GPG-KEY-centosofficial  build-freebsd.sh  bunkerweb-api.service  bunkerweb-autoconf.service  bunkerweb-core.service  bunkerweb-scheduler.service  bunkerweb-ui.service  bunkerweb-worker.service  bunkerweb.logrotate  bunkerweb.newsyslog.conf  bunkerweb.service  centos-9.repo  centos.repo  fpm-centos  fpm-debian  fpm-debian-bookworm  fpm-debian-trixie  (+22 more)
src/logging/: sql.lua
src/scheduler/: AGENTS.md  CLAUDE.md  Dockerfile  JobScheduler.py  api_client.py  entrypoint.sh  main.py  requirements.in  requirements.txt  scheduler.conf  scheduler.py
src/ui/: .env  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.dev  build.js  builder.py  config.py  dependencies.py  entrypoint.sh  gunicorn.conf.py  hook.py  linux.sh  main.py  models.py  package-lock.json  package.json  requirements.in  requirements.txt  styles.css  tailwind.config.js  temp.py  theophile.txt  todo.txt  ui.conf.example  ui.py  ui_database.py  utils.py  uvicorn_worker.py  widgets.py
src/worker/: AGENTS.md  CLAUDE.md  Dockerfile  app.py  executor.py  requirements.in  requirements.txt  tasks.py
(+9463 files in other folders)
