[project]
name = "BunkerWeb"
description = "Make your web services secure by default !"
version = "1.6.8~rc3"
authors = [
    { name = "Bunkerity", email = "contact@bunkerity.com" }
]

[tool.black]
line-length = 160
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | src/deps/src
  | src/common/core/modsecurity
  | env
)/
'''
