[project]
name = "BunkerWeb"
description = "Make your web services secure by default !"
version = "1.7.0~beta"
authors = [
    { name = "Bunkerity", email = "contact@bunkerity.com" }
]

[tool.black]
line-length = 160
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | src/deps/src
  | src/common/core/modsecurity
  | env
)/
'''

[tool.pytest.ini_options]
minversion = "8.4"
testpaths = ["tests/unit"]
addopts = "-ra --strict-markers"
markers = [
    "sqlite: test exercises the SQLite engine",
    "postgresql: test exercises PostgreSQL",
    "mariadb: test exercises MariaDB",
    "multiengine: parametrized across all selected DB engines",
    "slow: heavier tests (init_tables / large seeds); deselect with -m 'not slow'",
]
filterwarnings = [
    "ignore::sqlalchemy.exc.SAWarning",
]
